updated plugin update

--- a/build.gradle
+++ b/build.gradle
@@ -155,10 +155,10 @@ subprojects { project ->
     afterEvaluate {
         if ( isGrailsProject ) {
             assets {
-                minifyJs = true
-                minifyCss = true
+                minifyJs = false
+                minifyCss = false
                 if(isGrailsPlugin){
-                    packagePlugin = true
+                    packagePlugin = false
                 }
             }
         }
